tests/snapshots/cli__has_a_version.snap
---
source: tests/cli.rs
info:
  program: wasm-cli-runner
  args:
    - "--version"
---
success: true
exit_code: 0
----- stdout -----
wasm-cli-runner 1.0.0

----- stderr -----
